<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_store_black_24dp"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_product"
        android:icon="@drawable/ic_product_black_24dp"
        android:title="@string/menu_product" />
    <item
        android:id="@+id/nav_category"
        android:icon="@drawable/ic_category_black_24dp"
        android:title="@string/menu_category" />
    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_baseline_airport_shuttle_24"
        android:title="@string/menu_account" />
    <item
        android:id="@+id/nav_order"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/menu_order" />
    <item
        android:id="@+id/nav_message"
        android:icon="@drawable/ic_message_black_24dp"
        android:title="@string/menu_message" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/menu_profile" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/menu_logout" />
</menu>
